@@ -5,9 +5,9 @@
 \alias{dfRowsToList}
 \title{Convert a data.frame row to list of parameter-value-lists.}
 \usage{
-dfRowsToList(df, par.set, ...)
+dfRowsToList(df, par.set, enforce.col.types = FALSE, ...)
 
-dfRowToList(df, par.set, i)
+dfRowToList(df, par.set, i, enforce.col.types = FALSE, ...)
 }
 \arguments{
 \item{df}{[\code{data.frame}]\cr
@@ -16,6 +16,15 @@ Columns are assumed to be in the same order as par.set.}
 
 \item{par.set}{[\code{\link{ParamSet}}]\cr
 Parameter set.}
+
+\item{enforce.col.types}{[\code{logical(1)}]\cr
+Should all \code{df} columns be initially converted to the type
+returned by \code{getParamTypes(df, df.cols = TRUE)}.
+This can help to work with \dQuote{non-standard} data.frames where the types are
+slightly \dQuote{off}. But note that there is no guarantee that this will
+work if the types are really wrong and there is no naturally correct way
+to convert them.
+Default is \code{FALSE}.}
 
 \item{...}{[any]\cr
 Arguments passed to \code{\link[BBmisc]{convertDataFrameCols}}}
@@ -30,6 +39,7 @@ Row index.}
 Please note that (naturally) the columns of \code{df} have to be of the correct
 type w.r.t. the corresponding parameter. The only exception are integer parameters
 where the corresponding columns in \code{df} are allowed to be numerics.
+And also see the argument \code{enforce.col.types} as a way around this restriction.
 
 \tabular{ll}{
  numeric(vector)   \tab  \code{numeric}  \cr
