@@ -1,4 +1,5 @@
 ParamHelpers_1.7:
+- dfRowsToList, dfRowToList: added arg enforce.col.types
 
 ParamHelpers_1.6:
 - added new character parameter types, see new functions below
